# etfray

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Initial_req.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: changelog.md  index.md  roadmap.md
docs/developer/: architecture.md  contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/tutorials/: margin-monitoring.md  overlap-analysis.md  portfolio-setup.md  research-workflow.md  three-fund-analysis.md
docs/user-guide/: configuration.md  etf-discovery.md  etf-research.md  home-dashboard.md  ibkr-setup.md  keybindings.md  portfolio-analytics.md  seasonals.md  watchlist.md
etf_terminal/: app.py
etf_terminal/data/: edgar_service.py  ibkr_service.py  issuer_holdings.py  sector_service.py  source_resolver.py  zacks_service.py
etf_terminal/db/: database.py
etf_terminal/domain/: etf_analytics.py  portfolio_analytics.py
etf_terminal/ui/: commands.py  splash_screen.py
etf_terminal/ui/portfolio/: concentration_view.py  exposure_view.py  lookthrough_view.py  margin_view.py  overview_view.py  (+2 more)
etfray/: app.py  version_check.py
etfray/data/: _cache_utils.py  edgar_service.py  export_service.py  ibkr_service.py  market_data_service.py  price_history_service.py  screener_service.py  sector_service.py  source_resolver.py  web_service.py  zacks_service.py
etfray/db/: database.py
etfray/domain/: etf_analytics.py  overview_format.py  performance_analytics.py  portfolio_analytics.py  seasonals_analytics.py  seasonals_plot.py
etfray/ui/: commands.py  snapshot_view.py  splash_screen.py  version_update_modal.py
scripts/: check_charts.py  dev_test_version_modal.py
tests/: test_market_data_service.py  test_performance_analytics.py  test_period_returns.py  test_portfolio_analytics.py  test_price_history_service.py  test_seasonals_analytics.py  test_version_check.py  test_watchlist.py
(+35 files in other folders)
